# kirigami-gallery

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.kirigami2.gallery.appdata.xml  org.kde.kirigami2.gallery.desktop  snapcraft.yaml
poqm/ar/: kirigamigallery_qt.po
poqm/ca/: kirigamigallery_qt.po
poqm/ca@valencia/: kirigamigallery_qt.po
poqm/cs/: kirigamigallery_qt.po
poqm/da/: kirigamigallery_qt.po
poqm/de/: kirigamigallery_qt.po
poqm/el/: kirigamigallery_qt.po
poqm/en_GB/: kirigamigallery_qt.po
poqm/eo/: kirigamigallery_qt.po
poqm/es/: kirigamigallery_qt.po
poqm/et/: kirigamigallery_qt.po
poqm/eu/: kirigamigallery_qt.po
poqm/fi/: kirigamigallery_qt.po
poqm/fr/: kirigamigallery_qt.po
poqm/ga/: kirigamigallery_qt.po
poqm/gl/: kirigamigallery_qt.po
poqm/he/: kirigamigallery_qt.po
poqm/hi/: kirigamigallery_qt.po
poqm/ia/: kirigamigallery_qt.po
poqm/it/: kirigamigallery_qt.po
poqm/ja/: kirigamigallery_qt.po
poqm/ka/: kirigamigallery_qt.po
poqm/ko/: kirigamigallery_qt.po
poqm/lt/: kirigamigallery_qt.po
poqm/lv/: kirigamigallery_qt.po
poqm/nl/: kirigamigallery_qt.po
poqm/nn/: kirigamigallery_qt.po
poqm/pa/: kirigamigallery_qt.po
poqm/pl/: kirigamigallery_qt.po
poqm/pt/: kirigamigallery_qt.po
poqm/pt_BR/: kirigamigallery_qt.po
poqm/ro/: kirigamigallery_qt.po
poqm/ru/: kirigamigallery_qt.po
poqm/sa/: kirigamigallery_qt.po
poqm/sk/: kirigamigallery_qt.po
poqm/sl/: kirigamigallery_qt.po
poqm/sv/: kirigamigallery_qt.po
poqm/tr/: kirigamigallery_qt.po
poqm/ug/: kirigamigallery_qt.po
poqm/uk/: kirigamigallery_qt.po
poqm/x-test/: kirigamigallery_qt.po
poqm/zh_CN/: kirigamigallery_qt.po
poqm/zh_TW/: kirigamigallery_qt.po
src/: CMakeLists.txt  InfoData.cpp  InfoData.h  main.cpp  qtquickcontrols2.conf  resources.qrc
src/android/: AndroidManifest.xml  build.gradle
src/android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
src/data/: Messages.sh  info-data.json  metadata.desktop  metadata.json
src/data/contents/ui/: BaseApp.qml  DesktopExampleApp.qml  ExampleApp.qml  MainPage.qml  main.qml  mobileApp.qml
src/data/contents/ui/gallery/: ActionToolBarGallery.qml  BadgeGallery.qml  ButtonGallery.qml  CardsGridViewGallery.qml  CardsLayoutGallery.qml  CardsListViewGallery.qml  ChipGallery.qml  ColorSetGallery.qml  ColorsGallery.qml  DialogGallery.qml  DrawerGallery.qml  FormLayoutGallery.qml  InfoSheet.qml  InlineMessagesGallery.qml  LayersGallery.qml  ListViewGallery.qml  ListViewHeaderItemsGallery.qml  MetricsGallery.qml  MiscGallery.qml  MultipleColumnsGallery.qml  NavigationTabBarGallery.qml  NonScrollableGallery.qml  OverlaySheetGallery.qml  ProgressBarGallery.qml  SelectionControlsGallery.qml  SliderGallery.qml  TabBarGallery.qml  TextFieldGallery.qml
src/data/contents/ui/gallery/components/: CardsGridView.qml  InfoSheet.qml  InfoSheetAction.qml  SheetAction.qml
